Update title and button text in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Agents Platform | Build Autonomous AI Agents</title>
+    <title>AI Agents </title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -977,8 +977,8 @@
                     </div>
 
                     <button type="submit" class="btn-primary whatsapp-btn" style="width: 100%; margin-top: 1rem;">
-                        <span>Create Agent via WhatsApp</span>
-                        <span>💬</span>
+                        <span>Create Agent </span>
+                        <span></span>
                     </button>
                 </form>
             </div>
