--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
         <div class="pricing-grid">
             <div class="pricing-card reveal">
                 <h3>Starter</h3>
-                <div class="price">Free</div>
+                <div class="price">$100 <span>/mo</span></div>
                 <p class="period">For individuals & developers</p>
                 <ul class="pricing-features">
                     <li>3 active agents</li>
@@ -1021,7 +1021,7 @@
 
             <div class="pricing-card popular reveal">
                 <h3>Professional</h3>
-                <div class="price">$49<span>/mo</span></div>
+                <div class="price">$250 <span>/mo</span></div>
                 <p class="period">For small & medium businesses</p>
                 <ul class="pricing-features">
                     <li>20 active agents</li>
@@ -1104,7 +1104,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>© 2025 AI Agents Platform. All rights reserved | Made with ❤️ for innovation</p>
+            <p>© 2025 AI Agents Platform. All rights reserved | Made with  for innovation</p>
         </div>
     </footer>
 
