Change button style and text from 'Start Free' to 'Start Now'

--- a/index.html
+++ b/index.html
@@ -1016,9 +1016,9 @@
                     <li>Basic support</li>
                     <li>Basic analytics</li>
                 </ul>
-                <button class="btn-secondary" style="width: 100%;">Start Free</button>
+                <button class="btn-primary" style="width: 100%;">Start Now</button>
             </div>
-
+            
             <div class="pricing-card popular reveal">
                 <h3>Professional</h3>
                 <div class="price">$250 <span>/mo</span></div>
